QmlCompiler: Correctly read various method attributes in qmltypes

The "isConstant" tells us that the return value is constant, and we
should generally recognize "false" as well as "true".

Pick-to: 6.5
Fixes: QTBUG-123413
Change-Id: Ibb5114f6e8c8cb3b45cc2296af6f18cdc5cb1ed1
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit d75c816395e23ed0bb89e4e98ea3f809b5262527)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit ea76ae03f12496259f2085e3f766f8aab9a412bf)