src/imports/tooling/Method.qml
@@ -12,4 +12,5 @@ Member {
     property bool isPointer: false
     property bool isJavaScriptFunction: false
     property bool isCloned: false
+    property bool isConstant: false
 }
