tests/auto/qml/qmllint/data/useConstInvokable.qml
@@ -1,0 +1,5 @@
+import Things
+
+ConstInvokable {
+    objectName: getObject().objectName
+}
