tests/auto/qml/qmltyperegistrar/tst_qmltyperegistrar.h
@@ -668,6 +668,14 @@ struct NotNamespaceForeign {
     QML_ELEMENT
 };
 
+class ConstInvokable : public QObject
+{
+    Q_OBJECT
+    QML_ELEMENT
+public:
+    Q_INVOKABLE const QObject *getObject() { return nullptr; }
+};
+
 class tst_qmltyperegistrar : public QObject
 {
     Q_OBJECT
@@ -726,6 +734,8 @@ private slots:
     void sequenceRegistration();
     void valueTypeSelfReference();
     void foreignNamespaceFromGadget();
+
+    void constReturnType();
 
 private:
     QByteArray qmltypesData;
